--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    	<script type="text/javascript">
+	    	$(document).ready(function() {
+	    		// console.log("hello")
+			//      // var project_page = $("#project-page");
+			//      // console.log(project_page)
+			   
+			//      // $("#home").click(function(project_page) {
+			//      //      console.log("hello");
+			//      //      project_page.hide("slow", function() {
+			//      //           console.log("inside hide");
+			//      //      });
+			//      // });
+
+	    		$( "#home" ).click(function() {
+				  // alert('hello')
+				  console.log("hello")
+				});
+			});
+    	</script>
+  
 
 	  <!-- Compiled and minified JavaScript -->
 
@@ -16,18 +38,63 @@
 	</head>
 
 	<body>
-	<h1>MD RAHAMAN</h1>
+	<div class="container">
+		<div class="row left-align" class="logo">
+			<img src="assets/images/my-brand-logo 1.0.png" id="logo">
+		</div>
 
-    <!-- navigation section -->
-    <div>
+	    <!-- navigation section -->
+	    <div class="row">
+	    	<ul class="center-align">
+	    		<li><a href="" id="home">Home</a></li> |
+	    		<li><a href="" id="projects">Projects</a></li> |
+	    		<li><a href="" id="experience">Experience</a></li> |
+	    		<li><a href="" id="skills">Skills</a></li>
+	    	</ul>
+	    </div>
 
+	   <!-- home page -->
+	   <div class="row" id="home-page">
+
+		    <div class="row center-align" id="about" >
+		    	<img src="assets/images/profile.png" id="profile-pic">
+		    	<h1>MD RAHAMAN</h1>
+		    	<div>
+		    		<p id="about-me">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		    	</div>
+		    </div>
+
+		    <!-- github linkdin -->
+		    <div class="row">
+		    	<div class="col l6 right-align" id="icons">
+			    	<div class="col l2 center-align">
+			    		<img src="assets/images/github.png">
+			    	</div>
+
+			    	<div class="col l2 ">
+			    		<img src="assets/images/github.png">
+			    	</div>
+
+			    	<div class="col l2">
+			    		<img src="assets/images/github.png">
+			    	</div>
+		    	</div>
+		    </div>
+	    </div>
+
+	    <!-- Projects Page -->
+	    <div class="row" id="project-page">
+	    	<h1>Projects</h1>
+	    </div>
 
     </div>
-    
+
+
 		
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-		<script type="text/javascript" src="assets/js/scripts.js"></script>
+
+
 
 	</body>
 </html>
