fixed navigation bar link

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			      <a href="#!" class="brand-logo"><span class="logo grey-text text-lighten-2">Md Rahaman</span></a>
 			      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 			      <ul class="right hide-on-med-and-down">
-			        <li><a href="#">Skills</a></li>
-			        <li><a href="#">Projects</a></li>
-			        <li><a href="#">Experience</a></li>
-			        <li><a href="#">Contact</a></li>
+			        <li><a href="#skills">Skills</a></li>
+			        <li><a href="#projects">Projects</a></li>
+			        <li><a href="#experience">Experience</a></li>
+			        <li><a href="#contact-me">Contact</a></li>
 			      </ul>
 			      <ul class="side-nav" id="mobile-demo">
 			        <li><a href="#">Skills</a></li>
@@ -62,7 +62,7 @@
     	</div>
 
     	<!-- Projects -->
-    	<div class="container">
+    	<div class="container" id="projects">
     		
     		<div class="row">
     			<h2>Projects</h2>
@@ -139,7 +139,7 @@
 
     	<!-- Skills section -->
 
-    	<div class="container">
+    	<div class="container" id="skills">
     		<div class="row">
     			<h2>Skills</h2>
     		</div>
@@ -226,7 +226,7 @@
     		<div class="divider"></div>
     	</div>
 
-    	<div class="container">
+    	<div class="container" id="education">
     		<div class="row">
     			<h2>Education</h2>
     		</div>
@@ -280,7 +280,7 @@
     	</div>
 
     	<!-- Experience -->
-    	<div class="container">
+    	<div class="container" id="experience">
 
     		<div class="row">
     			<h2>Professional Experience</h2>
@@ -304,7 +304,7 @@
     	</div>
 
     	<!-- About Section -->
-    	<div class="container">
+    	<div class="container" id="about">
     		<div class="row">
     			<h2 class="section-header">About Me</h2>
     		</div>
@@ -324,7 +324,7 @@
     	<div class="container">
     		<div class="divider"></div>
     	</div>
-    	<div class="container">
+    	<div class="container" id="contact-me">
     		<div class="row">
     			<h2 class="section-header">Contact Me</h2>
     		</div>
