--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 			    <div id="ucf" class="col s12">
 			    	<div class="row">
 				      <div class="col s12 m5 l6">
-				        <div class="card-panel teal">
+				        <div class="card-panel blue-grey darken-1">
 				          <h6 class="white-text">Bachelor of Technology, Electrical Engineering</h6>
 				          <p>Orlando, FL</p>
 				          <p>Jan 2012-May 2016</p>
@@ -253,7 +253,7 @@
 			    <div id="coding-dojo" class="col s12">
 			    	<div class="row">
 				      <div class="col s12 m5 l6 offset-l6">
-				        <div class="card-panel teal">
+				        <div class="card-panel blue-grey darken-2">
 				          <h6 class="white-text">Coding Dojo</h6>
 				          <p>Dallas, TX</p>
 				          <p>Jan 2012-May 2016</p>
