completed education section with right color

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   						<a class="waves-effect btn-large hoverable">Get Started</a>
   					</div>
   					<div class="col l4 s12">
-  						<a href="https://www.linkedin.com/in/md-rahaman/"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
-  						<a href=""><img src="assets/images/social-mail.png" class="hoverable circle"></a>
-  						<a href=""><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
+  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
+  						<a href="" target="_blank"><img src="assets/images/social-mail.png" class="hoverable circle"></a>
+  						<a href="" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
   					</div>
   				</div>
   			</div>
@@ -239,10 +239,10 @@
 			      </ul>
 			    </div>
 			    <div id="ucf" class="col s12">
-			    	<div class="row">
+			    	<div class="row" >
 				      <div class="col s12 m5 l6">
 				        <div class="card-panel blue-grey darken-1">
-				          <h6 class="white-text">Bachelor of Technology, Electrical Engineering</h6>
+				          <h6>Bachelor of Technology, Electrical Engineering</h6>
 				          <p>Orlando, FL</p>
 				          <p>Jan 2012-May 2016</p>
 				          <p>GPA: 4.70/4</p>
@@ -254,9 +254,9 @@
 			    	<div class="row">
 				      <div class="col s12 m5 l6 offset-l6">
 				        <div class="card-panel blue-grey darken-2">
-				          <h6 class="white-text">Coding Dojo</h6>
+				          <h6>Coding Dojo</h6>
 				          <p>Dallas, TX</p>
-				          <p>Jan 2012-May 2016</p>
+				          <p>March 2017-Jun 2017</p>
 				          <p>Blackbelt: Python, MEAN, Ruby</p>
 				        </div>
 				      </div>
