complated footer section

--- a/index.html
+++ b/index.html
@@ -344,21 +344,19 @@
     		<div class="container">
     			<div class="row">
     				<div class="col l6 s12">
-    					<h5 class="whtie-text">Web Developer and DevOPs</h5>
+    					<h5 class="whtie-text">Web Development and DevOps</h5>
     					<ul>
     						<li class="grey-text text-lighten-4">Full Stack Web Development</li>
-    						<li class="grey-text text-lighten-4">Deployment</li>
+    						<li class="grey-text text-lighten-4">Deployment and Clouds</li>
     						<li class="grey-text text-lighten-4">Linux Administration</li>
     					</ul>
     				</div>
     				<div class="col l4 offset-l2 s12">
     					<h5 class="white-text">Links</h5>
-    					<ul>
-    						<li><a href="" class="grey-text text-lighten-3">Services</a></li>
-    						<li><a href="" class="grey-text text-lighten-3">Services</a></li>
-    						<li><a href="" class="grey-text text-lighten-3">Services</a></li><li><a href="" class="grey-text text-lighten-3">Services</a></li>
-
-    					</ul>
+    					<div class="col l4 s12">
+  							<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
+  							<a href="" target="_blank"><img src="assets/images/social-mail.png" class="hoverable circle"></a>
+  						</div>
     				</div>
     			</div>
     		</div>
