--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
   			<div class="container">
   				<div class="row">
   					<div class="col l2 offset-l5 s12">
-  						<img src="assets/images/social-linkedin.png">
-  						<img src="assets/images/social-linkedin.png">
-  						<img src="assets/images/social-linkedin.png">
+  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
+  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
+  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
   					</div>
   				</div>
   			</div>
