added github icon

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			        <li><a href="#contact-me">Contact</a></li>
 			      </ul>
 			      <ul class="side-nav" id="mobile-demo">
-			        <li><a href="#">Skills</a></li>
-			        <li><a href="#">Projects</a></li>
-			        <li><a href="#">Experience</a></li>
-			        <li><a href="#">Contact</a></li>
+			        <li><a href="#skills">Skills</a></li>
+			        <li><a href="#projects">Projects</a></li>
+			        <li><a href="#experience">Experience</a></li>
+			        <li><a href="#contact-me">Contact</a></li>
 			      </ul>
 			    </div>
 	  		</nav>
@@ -52,7 +52,7 @@
   					<div class="col l4 s12">
   						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
   						<a href="" target="_blank"><img src="assets/images/social-mail.png" class="hoverable circle"></a>
-  						<a href="" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
+  						<a href="https://github.com/soikatesc" target="_blank"><img src="assets/images/github.png" class="hoverable circle"></a>
   					</div>
   				</div>
   			</div>
@@ -127,8 +127,8 @@
   				<div class="row">
   					<div class="col l2 offset-l5 s12">
   						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
-  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
-  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
+  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/github.png" class="hoverable circle"></a>
+  						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-mail.png" class="hoverable circle"></a>
   					</div>
   				</div>
   			</div>
