updated devops skill section

--- a/index.html
+++ b/index.html
@@ -191,31 +191,31 @@
 					          <h6 class="white-text">Automation</h6>
 					          <p>Deployments Tools: Ansible, Chef, Docker</p>
 					          <p>Templates: YAML, Cookbooks, playbooks</p>
-					          <p>Additional: </p>
+					          <p>Additional: Jenkins, Circle CI</p>
 					    </div>
 				    </div>
 				    <div class="col s12 l6">
 						<div class="card-panel blue-grey darken-2">
 					          <h6 class="white-text">Cloud</h6>
-					          <p>Frameworks: Ruby On Rails</p>
-					          <p>Data Analysis: Active Record, CLi</p>
-					          <p>Additional: Jinja Template, SQLite, Django-Rest</p>
+					          <p>Environment: AWS</p>
+					          <p>Technologies: S3, EC3, VPC, IAM, Cloud Formation</p>
+					          <p>Additional: Ansible with AWS, SQS, SNS, DynamoDB</p>
 					    </div>
 				    </div>
 				    <div class="col s12 l6">
 						<div class="card-panel blue-grey darken-2">
-					          <h6 class="white-text">Cloud</h6>
-					          <p>Frameworks: Ruby On Rails</p>
-					          <p>Data Analysis: Active Record, CLi</p>
-					          <p>Additional: Jinja Template, SQLite, Django-Rest</p>
+					          <h6 class="white-text">Unix System</h6>
+					          <p>Operating System: Ubuntu, RedHat, Centos7</p>
+					          <p>Technologies: Bash(Love it), Managin</p>
+					          <p>Additional: Managing Users, Package Mangement</p>
 					    </div>
 				    </div>
 				    <div class="col s12 l6">
 						<div class="card-panel blue-grey darken-2">
-					          <h6 class="white-text">Cloud</h6>
-					          <p>Frameworks: Ruby On Rails</p>
-					          <p>Data Analysis: Active Record, CLi</p>
-					          <p>Additional: Jinja Template, SQLite, Django-Rest</p>
+					          <h6 class="white-text">Networking</h6>
+					          <p>System: Unix</p>
+					          <p>Technologies: TCP/IP, UDP</p>
+					          <p>Additional: Concept of Networking</p>
 					    </div>
 				    </div>
 			    </div>
