completed skills section

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 				    <div class="col s12 l6">
 						<div class="card-panel blue-grey darken-1">
 					          <h6 class="white-text">MEAN</h6>
-					          <p>Frameworks: Node Js, Express Js</p>
-					          <p>Data Analysis: Numpy, Pandas, Matplotlib</p>
-					          <p>Additional: Jinja Template, SQLite, Django-Rest</p>
+					          <p>Frameworks: Node Js, Express Js, Angular Js</p>
+					          <p>Database: MongoDB, Mongoose Framework</p>
+					          <p>Additional: Angular</p>
 					    </div>
 				    </div>
 				    <div class="col s12 l6">
@@ -173,15 +173,15 @@
 					          <h6 class="white-text">Ruby</h6>
 					          <p>Frameworks: Ruby On Rails</p>
 					          <p>Data Analysis: Active Record, CLi</p>
-					          <p>Additional: Jinja Template, SQLite, Django-Rest</p>
+					          <p>Additional: PostgreSQL, TDD</p>
 					    </div>
 				    </div>
 				    <div class="col s12 l6">
 						<div class="card-panel blue-grey darken-1">
 					          <h6 class="white-text">Web Fundamentals</h6>
-					          <p>Markups: HTML, CSS, JavaScript</p>
+					          <p>Markups: HTML, CSS</p>
 					          <p>Web Servers: Nginx, Apache</p>
-					          <p>Additionals: Rest APIS, JSON, XML, BootStrap, Materialize, Ajax, JQuery, Postman</p>					  
+					          <p>Additionals: Rest APIS, JSON, Materialize, Postman</p>					  
 					    </div>
 				    </div>			
 			    </div>
