added project description

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   			<div class="container">
   				<div class="row">
   					<div class="col l6 s12 white-text">
-  						<h1 class="left-align flow-text valign" id="main-heading">I am Md Rahaman, a Full Stack Web Developer &amp; a passionate DevOps</h1>
+  						<h1 class="left-align flow-text valign" id="main-heading">I am Md Rahaman, a Full Stack Web Developer &amp; a passionate DevOps.</h1>
   					</div>
   				</div>
   				<div class="row">
@@ -80,7 +80,7 @@
 					    </div>
 					    <div class="card-reveal">
 					      <span class="card-title grey-text text-darken-4">Turbo Deployments<i class="material-icons right">close</i></span>
-					      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+					      <p>Turbo Deployment project was build to help Coding Dojo studuent to deploy their web application in Aamzon Web Service(EC2). This project completely build on Ruby on Rails web framework which provide user convinent way generate scripts.</p>
 					    </div>
 		  			</div>
     			</div>
