--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					    </div>
 					    <div class="card-content">
 					      <span class="card-title activator grey-text text-darken-4">Dojo Chat<i class="material-icons right">more_vert</i></span>
-					      <p><p><a class="waves-effect btn-large hoverable" href="https://turbodeployments.online">Click here to see</a></p></p>
+					      <p><p><a class="waves-effect btn-large hoverable" href="https://github.com/soikatesc/DojoChat" target="_blank">Click here to see</a></p></p>
 					    </div>
 					    <div class="card-reveal">
 					      <span class="card-title grey-text text-darken-4">Dojo Chat<i class="material-icons right">close</i></span>
