Added mail link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   					</div>
   					<div class="col l4 s12">
   						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
-  						<a href="" target="_blank"><img src="assets/images/social-mail.png" class="hoverable circle"></a>
+  						<a href="mailto:soikatesc@gmail.com" target="_blank"><img src="assets/images/social-mail.png" class="hoverable circle"></a>
   						<a href="https://github.com/soikatesc" target="_blank"><img src="assets/images/github.png" class="hoverable circle"></a>
   					</div>
   				</div>
