fixed image size

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
     		<div class="row">
     			<div class="col l6">
-    				<div class="card">
+    				<div class="card hoverable project">
 					    <div class="card-image waves-effect waves-block waves-light z-depth-2">
-					      <img class="activator" src="assets/images/turbo_deopoyments.png">
+					      <img class="activator img-size" src="assets/images/turbo_deopoyments.png">
 					    </div>
 					    <div class="card-content">
 					      <span class="card-title activator grey-text text-darken-4">Turbo Deployments<i class="material-icons right">more_vert</i></span>
@@ -86,9 +86,9 @@
     			</div>
 
     			<div class="col l6">
-    				<div class="card">
+    				<div class="card hoverable project">
 					    <div class="card-image waves-effect waves-block waves-light z-depth-2">
-					      <img class="activator" src="assets/images/hero_image.jpg">
+					      <img class="activator img-size" src="assets/images/hero_image.jpg">
 					    </div>
 					    <div class="card-content">
 					      <span class="card-title activator grey-text text-darken-4">Dojo Chat<i class="material-icons right">more_vert</i></span>
@@ -104,9 +104,9 @@
 
     		<div class="row">
     			<div class="col l6 offset-l3">
-    				<div class="card">
+    				<div class="card hoverable project">
 					    <div class="card-image waves-effect waves-block waves-light z-depth-2">
-					      <img class="activator" src="assets/images/hero_image.jpg">
+					      <img class="activator img-size" src="assets/images/hero_image.jpg">
 					    </div>
 					    <div class="card-content">
 					      <span class="card-title activator grey-text text-darken-4">Rasberry Gateway<i class="material-icons right">more_vert</i></span>
