chnage project 3 position

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     		</div>
 
     		<div class="row">
-    			<div class="col l6 offset-l3">
+    			<div class="col l6">
     				<div class="card hoverable project">
 					    <div class="card-image waves-effect waves-block waves-light z-depth-2">
 					      <img class="activator img-size" src="assets/images/hero_image.jpg">
