added explination for Dojo Chat project

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					    </div>
 					    <div class="card-reveal">
 					      <span class="card-title grey-text text-darken-4">Dojo Chat<i class="material-icons right">close</i></span>
-					      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+					      <p>Created a responsive chat website supporting mulitple concurrent users. Technologies used include Angular Js, Socket.IO, Node Js, Express, MongoDB, Materialize. The site allowed multipe to users to chat together, tracked who was currently onlinem, and allowed user's to upload files. Collaborated with a team using Git and GitHub.</p>
 					    </div>
 		  			</div>
     			</div>	
