changed description for Raspbery PI Gateway Project

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					    </div>
 					    <div class="card-reveal">
 					      <span class="card-title grey-text text-darken-4">Rasberry Gateway<i class="material-icons right">close</i></span>
-					      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+					      <p>Created a web application to remotely open a garage door. The website was built using Dajngo. Nginx and Gunicorn were deployed to a Raspberry Pi to create a webserver. User data was stored locally through SQLite. Version control maintained through Git and GitHub. The Raspberry Pi was connected to a relay to control the state of the garage door.</p>
 					    </div>
 		  			</div>
     			</div>
