--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     	<div class="parallax-container valign-wrapper">
   			<div class="container">
   				<div class="row">
-  					<div class="col l2 offset-l5 s12">
+  					<div class="col l2 offset-l5 s12 offset-s3">
   						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-linkedin.png" class="hoverable circle"></a>
   						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/github.png" class="hoverable circle"></a>
   						<a href="https://www.linkedin.com/in/md-rahaman/" target="_blank"><img src="assets/images/social-mail.png" class="hoverable circle"></a>
