added prepaid energy meter project

--- a/index.html
+++ b/index.html
@@ -118,8 +118,25 @@
 					    </div>
 		  			</div>
     			</div>
+
+    			<div class="col l6">
+    				<div class="card hoverable project">
+					    <div class="card-image waves-effect waves-block waves-light z-depth-2">
+					      <img class="activator img-size" src="assets/images/hero_image.jpg">
+					    </div>
+					    <div class="card-content">
+					      <span class="card-title activator grey-text text-darken-4">Prepaid Energy Meter<i class="material-icons right">more_vert</i></span>
+					      <p><p><a class="waves-effect btn-large hoverable" href="https://www.youtube.com/watch?v=zpD_gr6DWP4"target="_blank" >Click here to see</a></p></p>
+					    </div>
+					    <div class="card-reveal">
+					      <span class="card-title grey-text text-darken-4">Prepaid Energy Meter<i class="material-icons right">close</i></span>
+					      <p>Implemented a prepaid enery meter that involves TI MCU's and IC's, Wi-Fi, NFC, integrated and interfacing to LCD and Android Apps.</p>
+					    </div>
+		  			</div>
+    			</div>
     		</div>
     	</div>
+
 
     	<!-- pre-skills sections -->
     	<div class="parallax-container valign-wrapper">
