added certification section

--- a/index.html
+++ b/index.html
@@ -282,6 +282,39 @@
 			</div>
     	</div>
 
+    	<div class="container">
+    		<div class="divider"></div>
+    	</div>
+
+    	<!-- Certification -->
+    	<div class="container" id="certification">	
+    		<div class="row">
+    			<h2>Certification</h2>
+    		</div>
+    		<div class="row">
+    			<div class="col l12">
+					<ul class="tabs">
+        				<li class="tab col s3 l6"><a href="#coding-dojo-cert">Coding Dojo</a></li>
+        				<li class="tab col s3 l6"><a href="#aws-cert">Amazon Web Service</a></li>
+      				</ul> 				
+    			</div>
+    			<div id="coding-dojo-cert" class="col s12 l6 ">
+    				<div class="card hoverable materialboxed">
+    					<div class="card-image waves-effect waves-block waves-light">
+     						<img class="activator" src="./assets/images/coding_dojo_cert.jpg">
+    					</div>
+    				</div>
+    			</div>
+    			<div id="aws-cert" class="col s12 l6 offset-l6">
+					<div class="card hoverable materialboxed">
+    					<div class="card-image waves-effect waves-block waves-light">
+     						<img class="activator" src="./assets/images/aws_dev_asso_cert.jpg">
+    					</div>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
+
     	<!-- pre experience Section -->
     	<div class="parallax-container valign-wrapper">
   			<div class="container">
