make change on tab colors

--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
     		  <div class="row">
 			    <div class="col s12">
 			      <ul class="tabs">
-			        <li class="tab col s6"><a class="active" href="#web">WEB DEVELOPMENT</a></li>
-			        <li class="tab col s6"><a href="#dev-ops">DEVOPS</a></li>
+			        <li class="tab col s6"><a class="active blue-grey-text" href="#web">WEB DEVELOPMENT</a></li>
+			        <li class="tab col s6"><a href="#dev-ops" class="blue-grey-text">DEVOPS</a></li>
+			        <div class="indicator blue-grey darken-4" style="z-index:1"></div>
 			      </ul>
 			    </div>
 			    <div id="web" class="col s12 l12">
@@ -251,8 +252,9 @@
     		<div class="row">
 			    <div class="col s12">
 			      <ul class="tabs">
-			        <li class="tab col s6"><a class="active" href="#ucf">University of Central Florida</a></li>
-			        <li class="tab col s6"><a href="#coding-dojo">Coding Dojo</a></li>
+			        <li class="tab col s6"><a class="active blue-grey-text" href="#ucf" >University of Central Florida</a></li>
+			        <li class="tab col s6"><a href="#coding-dojo" class="blue-grey-text">Coding Dojo</a></li>
+			        <div class="indicator blue-grey darken-4" style="z-index:1"></div>
 			      </ul>
 			    </div>
 			    <div id="ucf" class="col s12">
@@ -294,8 +296,9 @@
     		<div class="row">
     			<div class="col l12">
 					<ul class="tabs">
-        				<li class="tab col s3 l6"><a href="#coding-dojo-cert">Coding Dojo</a></li>
-        				<li class="tab col s3 l6"><a href="#aws-cert">Amazon Web Service</a></li>
+        				<li class="tab col s3 l6"><a href="#coding-dojo-cert" class="blue-grey-text">Coding Dojo</a></li>
+        				<li class="tab col s3 l6"><a href="#aws-cert" class="blue-grey-text">Amazon Web Service</a></li>
+        				<div class="indicator blue-grey darken-4" style="z-index:1"></div>
       				</ul> 				
     			</div>
     			<div id="coding-dojo-cert" class="col s12 l6 ">
